overlays/staging/backend/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leap25-backend-ingress
spec:
  tls:
    - hosts:
        - api-staging.leap25.com
      secretName: staging-leap25-backend-tls
  rules:
    - host: api-staging.leap25.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-leap25-backend
                port:
                  number: 80
